@@ -332,6 +332,23 @@ plotAbs(ret, type="overview")
 {The colors visualize the copy number fitting score from low (blue) to high
 (red). The numbers indicate the ranks of the local optima.}
 
+The number of considered local optima is typically high. Optima with low
+likelihood score can be automatically removed with the
+\Rfunction{bootstrapSolutions} function
+(Figure~\ref{figure/figureexample1b-1}).  This function bootstraps variants in
+the provided VCF and re-ranks local optima. Solutions that never rank high are
+then excluded. Large-scale copy number artifacts can decrease the likelihood
+scores of correct solutions, potentially resulting in a removal of
+purity/ploidy estimates closest to the true values.
+
+<<figureexample1b, fig.show='hide'>>=
+ret <- bootstrapSolutions(ret)
+plotAbs(ret, type="overview")
+@
+\incfig{figure/figureexample1b-1}{0.75\textwidth}{Overview.}
+{As in Figure~\ref{figure/figureexample1-1}, but with low likelihood solutions
+removed.}
+
 We now look at the main plots of the maximum likelihood solution in more detail.
 
 <<figureexample2, fig.show='hide'>>=
